# ProjectFlash

./: CMakeLists.txt  README.md  area_2d.gd  area_2d.gd.uid  enemy.gd  enemy.gd.uid  exporatory_scene.gd  exporatory_scene.gd.uid  exporatory_scene.tscn  player.gd  player.gd.uid
cmake/: NoInSourceBuilds.cmake  Testing.cmake
project/: exporatory_scene.gd  icon.svg.import  player.gd  progress_bar.gdshader  progress_bar.gdshader.uid  project.godot
src/: CMakeLists.txt  TestObject.cpp  TestObject.h  gdexample.cpp  gdexample.h  register_types.cpp  register_types.h
test/: CMakeLists.txt  GodotFixture.cpp  GodotFixture.h  testMain.cpp
